--- a/ERC20TokenProject/brownie-config.yaml
+++ b/ERC20TokenProject/brownie-config.yaml
@@ -1,14 +1,13 @@
 dependencies:
   - OpenZeppelin/openzeppelin-contracts@4.9.2
-
 compiler:
   solc:
     remappings:
       - '@openzeppelin=OpenZeppelin/openzeppelin-contracts@4.9.2'
-
 dotenv: .env
-
 wallets:
-  from_key:${PRIVATE_KEY}
+  from_key: ${PRIVATE_KEY}
+networks:
+  default: sepolia
 
 
