--- a/ERC20TokenProject/brownie-config.yaml
+++ b/ERC20TokenProject/brownie-config.yaml
@@ -1,9 +1,11 @@
 dependencies:
   - OpenZeppelin/openzeppelin-contracts@4.9.2
+  - smartcontractkit/chainlink-brownie-contracts@0.6.1
 compiler:
   solc:
     remappings:
       - '@openzeppelin=OpenZeppelin/openzeppelin-contracts@4.9.2'
+      - '@chainlink=smartcontractkit/chainlink-brownie-contracts@0.6.1'
 dotenv: .env
 wallets:
   from_key: ${PRIVATE_KEY}
