adding complete feature to Task manager app

--- a/TodoList/brownie-config.yaml
+++ b/TodoList/brownie-config.yaml
@@ -9,7 +9,7 @@ compiler:
 dotenv: .env
 wallets:
   from_key: ${PRIVATE_KEY}
-networks:
-  default: sepolia2
+# networks:
+#   default: sepolia2
 
 
